cmake_minimum_required(VERSION 3.29)
project(Projet)

set(CMAKE_CXX_STANDARD 20)

add_executable(Projet main.cpp
        player.h
        board.h
        board.cpp
        player.cpp
        square.h
        tetris.h
        tetris4.h
        tetris96.h
        tetris1.cpp
        tetris2.cpp
        tetris5.h
        tetris95.h
        tetris94.h
        tetris93.h
        tetris92.h
        tetris91.h
        tetris90.h
        tetris89.h
        tetris88.h
        tetris87.h
        tetris86.h
        tetris85.h
        tetris84.h
        tetris83.h
        tetris82.h
        tetris81.h
        tetris79.h
        tetris78.h
        tetris77.h
        tetris76.h
        tetris75.h
        tetris74.h
        tetris73.h
        tetris72.h
        tetris71.h
        tetris70.h
        tetris69.h
        tetris68.h
        tetris67.h
        tetris66.h
        tetris65.h
        tetris64.h
        tetris63.h
        tetris62.h
        tetris61.h
        tetris60.h
        tetris3.h
        tetris6.h
        tetris8.h
        tetris9.h
        tetris10.h
        tetris11.h
        tetris12.h
        tetris13.h
        tetris14.h
        tetris15.h
        tetris16.h
        tetris17.h
        tetris18.h
        tetris19.h
        tetris21.h
        tetris22.h
        tetris23.h
        tetris24.h
        tetris25.h
        tetris26.h
        tetris27.h
        tetris28.h
        tetris29.h
        tetris30.h
        tetris31.h
        tetris32.h
        tetris33.h
        tetris34.h
        tetris35.h
        tetris36.h
        tetris37.h
        tetris38.h
        tetris39.h
        tetris40.h
        tetris41.h
        tetris42.h
        tetris43.h
        tetris44.h
        tetris45.h
        tetris46.h
        tetris47.h
        tetris48.h
        tetris49.h
        tetris50.h
        tetris51.h
        tetris52.h
        tetris53.h
        tetris55.h
        tetris56.h
        tetris57.h
        tetris58.h
        tetris59.h
        tetris54.h
        tetris7.h
        tetris20.h
        tetris80.h
        tetris3.cpp
        tetris4.cpp
        tetris5.cpp
        tetris6.cpp
        tetris7.cpp
        tetris8.cpp
        tetris9.cpp
        tetris10.cpp
        tetris11.cpp
        tetris12.cpp
        tetris13.cpp
        tetris14.cpp
        tetris15.cpp
        tetris16.cpp
        tetris17.cpp
        tetris18.cpp
        tetris19.cpp
        tetris20.cpp
        tetris21.cpp
        tetris22.cpp
        tetris23.cpp
        tetris24.cpp
        tetris25.cpp
        tetris26.cpp
        tetris27.cpp
        tetris28.cpp
        tetris29.cpp
        tetris30.cpp
        tetris31.cpp
        tetris32.cpp
        tetris33.cpp
        tetris34.cpp
        tetris35.cpp
        tetris36.cpp
        tetris37.cpp
        tetris38.cpp
        tetris39.cpp
        tetris40.cpp
        tetris41.cpp
        tetris42.cpp
        tetris43.cpp
        tetris44.cpp
        tetris45.cpp
        tetris46.cpp
        tetris47.cpp
        tetris48.cpp
        tetris49.cpp
        tetris50.cpp
        tetris51.cpp
        tetris52.cpp
        tetris53.cpp
        tetris54.cpp
        tetris55.cpp
        tetris56.cpp
        tetris57.cpp
        tetris58.cpp
        tetris59.cpp
        tetris60.cpp
        tetris61.cpp
        tetris62.cpp
        tetris63.cpp
        tetris64.cpp
        tetris65.cpp
        tetris66.cpp
        tetris67.cpp
        tetris68.cpp
        tetris69.cpp
        tetris70.cpp
        tetris71.cpp
        tetris72.cpp
        tetris73.cpp
        tetris74.cpp
        tetris75.cpp
        tetris76.cpp
        tetris77.cpp
        tetris78.cpp
        tetris79.cpp
        tetris80.cpp
        tetris81.cpp
        tetris82.cpp
        tetris83.cpp
        tetris84.cpp
        tetris85.cpp
        tetris86.cpp
        tetris87.cpp
        tetris88.cpp
        tetris89.cpp
        tetris90.cpp
        tetris91.cpp
        tetris92.cpp
        tetris93.cpp
        tetris94.cpp
        tetris95.cpp
        tetris96.cpp
        display.h
        display.cpp
        tetris.cpp)
